--- a/reference-gui/package.json
+++ b/reference-gui/package.json
@@ -4,9 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "http-server"
+    "build": "webpack",
+    "serve": "webpack serve"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
-    "http-server": "^14.1.1"
+    "jsonschema": "^1.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "url": "^0.11.0"
   }
 }
