--- a/lib/javascript-library/package.json
+++ b/lib/javascript-library/package.json
@@ -5,18 +5,25 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && yarn build:main",
-    "build:main": "tsc -p tsconfig.build.json"
+    "build:main": "tsc -p tsconfig.build.json",
+    "lint": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist ."
   },
   "devDependencies": {
     "@sofie-automation/code-standard-preset": "^2.1.0",
+    "@types/jest": "^26.0.9",
     "@types/node": "^14.18.23",
     "@types/node-fetch": "^2.6.2",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "rimraf": "^3.0.2",
-    "typescript": "~4.8"
+    "typescript": "~4.8",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "jsonschema": "^1.4.1",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.19"
+    "node-fetch": "^2.6.1"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
