--- a/lib/javascript-library/package.json
+++ b/lib/javascript-library/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf dist && yarn build:main",
     "build:main": "tsc -p tsconfig.build.json",
-    "lint": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist ."
+    "lint": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist .",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@sofie-automation/code-standard-preset": "^2.1.0",
@@ -14,10 +15,11 @@
     "@types/node": "^14.18.23",
     "@types/node-fetch": "^2.6.2",
     "jest": "^29.2.2",
-    "ts-jest": "^29.0.3",
+    "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
-    "typescript": "~4.8",
-    "nodemon": "^2.0.19"
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "~4.8"
   },
   "dependencies": {
     "jsonschema": "^1.4.1",
