chore: rename npm lib

--- a/lib/javascript-library/package.json
+++ b/lib/javascript-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gdd-js",
+  "name": "graphics-data-definition",
   "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
