--- a/lib/javascript-library/package.json
+++ b/lib/javascript-library/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rimraf dist && yarn build:main",
     "build:main": "tsc -p tsconfig.build.json",
-    "lint": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx --ignore-pattern dist .",
+    "lint": "eslint --ext .ts --ext .js --ext .tsx --ext .jsx .",
     "release": "standard-version"
   },
   "devDependencies": {
