--- a/lib/javascript-library/tsconfig.build.json
+++ b/lib/javascript-library/tsconfig.build.json
@@ -8,7 +8,8 @@
 		"src/**/*spec.ts",
 		"src/**/__tests__/*",
 		"src/**/__mocks__/*",
-		"scratch/**"
+		"scratch/**",
+		"examples"
 	],
 	"compilerOptions": {
 		"outDir": "./dist",
