--- a/lib/javascript-library/tsconfig.json
+++ b/lib/javascript-library/tsconfig.json
@@ -1,8 +1,7 @@
 {
 	"extends": "./tsconfig.build.json",
 	"include": [
-		"src/**/*.ts",
-		"examples/**/*.ts"
+		"src/**/*.ts"
 	],
 	"exclude": [
 		"node_modules/**"
