chore: add license file, ensure the correct files are included in published npm package

--- a/lib/javascript-library/package.json
+++ b/lib/javascript-library/package.json
@@ -28,5 +28,10 @@
   "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
   "engines": {
     "node": ">=14"
-  }
+  },
+  "files": [
+		"/dist",
+		"/README.md",
+		"/LICENSE"
+	]
 }
