--- a/.github/workflows/publish-prerelease.yml
+++ b/.github/workflows/publish-prerelease.yml
@@ -1,4 +1,4 @@
-name: Publish prerelease to NPM
+name: Javascript-library - Publish prerelease to NPM
 
 on:
   # Allows you to run this workflow manually from the Actions tab
